Initialize activities array in renderGreetingAndActions function for improved data handling.

--- a/public/index.html
+++ b/public/index.html
@@ -1441,7 +1441,7 @@
 
         // --- Main Greeting and Actions ---
         function renderGreetingAndActions() {
-            });
+            const activities = [];
             (localData.medicalRecords || []).forEach(entry => {
                 activities.push({
                     type: 'record',
